--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dynamic-background",
   "version": "0.1.0",
   "description": "Change background from elements dynamically, even with images or gradients",
-  "main": "main.js",
+  "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\""
   },
