--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dynamic-background",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Change background from elements dynamically, even with images or gradients",
-  "main": "bundle.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\""
   },
