--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "dynamic-background",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "description": "Change background from elements dynamically, even with images or gradients",
-  "main": "bundle.js",
+  "main": "./bundle.js",
+  "exports": {
+    ".": "./bundle.js",
+    "./module": "./bundle.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\""
   },
   "repository": {
-    "type": "git",
+    "type": "module",
     "url": "git+https://github.com/CoffeAddict/Dynamic-Background.git"
   },
   "author": "CoffeAddict",
